Fixed ambiguity in RMatrix definition, added some documentation

--- a/test/plot_tests.ipynb
+++ b/test/plot_tests.ipynb
@@ -5,7 +5,7 @@
    "execution_count": 7,
    "source": [
     "using Plots\r\n",
-    "using Flight.Attitude\r\n",
+    "using Flight.Rotations\r\n",
     "\r\n",
     "a = 1\r\n",
     "b = 2a\r\n",
