--- a/c182.ipynb
+++ b/c182.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -64,13 +64,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "3-element reinterpret(Float64, ::Vector{Quantity{Float64, 𝐋, Unitful.FreeUnits{(m,), 𝐋, nothing}}}):\n",
+       "3-element Vector{Float64}:\n",
        " 1.09728\n",
        " 0.0\n",
        " 1.5087599999999999"
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -160,16 +160,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "┌ Error: Failed to revise c:\\Users\\Miguel\\Repos\\Julia\\Flight\\src\\c182t.jl\n",
+      "│   exception = Revise.ReviseEvalException(\"c:\\\\Users\\\\Miguel\\\\Repos\\\\Julia\\\\Flight\\\\src\\\\c182t.jl:36\", ErrorException(\"invalid redefinition of constant Ldg\"), Any[(top-level scope at c182t.jl:36, 1)])\n",
+      "└ @ Revise C:\\Users\\Miguel\\.julia\\packages\\Revise\\OgnOk\\src\\packagedef.jl:707\n",
+      "┌ Warning: The running code does not match the saved version for the following files:\n",
+      "│ \n",
+      "│   c:\\Users\\Miguel\\Repos\\Julia\\Flight\\src\\c182t.jl\n",
+      "│ \n",
+      "│ If the error was due to evaluation order, it can sometimes be resolved by calling `Revise.retry()`.\n",
+      "│ Use Revise.errors() to report errors again. Only the first error in each file is shown.\n",
+      "│ Your prompt color may be yellow until the errors are resolved.\n",
+      "└ @ Revise C:\\Users\\Miguel\\.julia\\packages\\Revise\\OgnOk\\src\\packagedef.jl:817\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "3-element SVector{3, Float64} with indices SOneTo(3):\n",
-       "  0.05588000000000015\n",
-       " -7.807613203284035e-17\n",
-       "  0.58166"
+       "  1.27\n",
+       " -4.009567099216383e-16\n",
+       "  2.00406"
       ]
      },
      "metadata": {},
@@ -190,9 +207,7 @@
     "r_ObR_b = fromJSBSim([58.2, 43, -15.5])\n",
     "r_ObP_b = fromJSBSim([-37.7, 0, 26.6])\n",
     "\n",
-    "r_ObG0_b\n",
-    "# r_ObG2_b\n",
-    "# r_ObG6_b"
+    "r_ObN_b"
    ]
   },
   {
