C182T aerodynamics finished, some sanity checks and initial tests done

--- a/c182.ipynb
+++ b/c182.ipynb
@@ -27,11 +27,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let fh(Oh,εh) denote the reference frame used by JSBSim. The origin $O_h$ is an arbitrary point, and\n",
-    "the axes $\\varepsilon_h$ have x pointing backward and z upward.\n",
+    "Let fh(Oh,εh) denote the construction reference frame used by JSBSim. The origin $O_h$ is an arbitrary point, and the axes $\\varepsilon_h$ have x pointing backward and z upward.\n",
     "\n",
-    "Let εb denote the conventional flight physics axes, x pointing forward and z downward. The rotation\n",
-    "from $\\varepsilon_b$ to $\\varepsilon_h$ is thus given by:"
+    "Let fb(Ob,εb) denote our main body frame, where εb denote the conventional flight physics axes, x pointing forward and z downward. The rotation from $\\varepsilon_b$ to $\\varepsilon_h$ is thus given by:"
    ]
   },
   {
@@ -142,8 +140,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "With this, we can convert all the following position vectors defined in JSBSim to our flight physics\n",
-    "conventional reference frame:\n",
+    "With this, we can convert all the following position vectors defined in JSBSim's construction frame to our flight physics conventional reference frame:\n",
     "- G0 (center of mass for the empty aircraft)\n",
     "- G1 (center of mass of the pilot)\n",
     "- G2 (center of mass of copilot)\n",
