Fixed wrong sign in C_n_beta causing lateral-directional instability

--- a/sketches/c182.ipynb
+++ b/sketches/c182.ipynb
@@ -204,7 +204,7 @@
     "r_ObR_b = fromJSBSim([58.2, 43, -15.5])\n",
     "r_ObP_b = fromJSBSim([-37.7, 0, 26.6])\n",
     "\n",
-    "r_ObN_b"
+    "@show r_ObN_b"
    ]
   },
   {
