--- a/sketches/geoid96.ipynb
+++ b/sketches/geoid96.ipynb
@@ -72,9 +72,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SystemError",
+     "evalue": "SystemError: opening file \"ww15mgh_be.bin\": No such file or directory",
+     "output_type": "error",
+     "traceback": [
+      "SystemError: opening file \"ww15mgh_be.bin\": No such file or directory\n",
+      "\n",
+      "Stacktrace:\n",
+      "  [1] systemerror(p::String, errno::Int32; extrainfo::Nothing)\n",
+      "    @ Base .\\error.jl:168\n",
+      "  [2] #systemerror#62\n",
+      "    @ .\\error.jl:167 [inlined]\n",
+      "  [3] systemerror\n",
+      "    @ .\\error.jl:167 [inlined]\n",
+      "  [4] open(fname::String; lock::Bool, read::Bool, write::Nothing, create::Nothing, truncate::Nothing, append::Nothing)\n",
+      "    @ Base .\\iostream.jl:293\n",
+      "  [5] open(fname::String, mode::String; lock::Bool)\n",
+      "    @ Base .\\iostream.jl:355\n",
+      "  [6] open(fname::String, mode::String)\n",
+      "    @ Base .\\iostream.jl:355\n",
+      "  [7] open(::var\"#119#120\", ::String, ::Vararg{String, N} where N; kwargs::Base.Iterators.Pairs{Union{}, Union{}, Tuple{}, NamedTuple{(), Tuple{}}})\n",
+      "    @ Base .\\io.jl:328\n",
+      "  [8] open(::Function, ::String, ::String)\n",
+      "    @ Base .\\io.jl:328\n",
+      "  [9] top-level scope\n",
+      "    @ ~\\Repos\\Julia\\Flight\\sketches\\geoid96.ipynb:3\n",
+      " [10] eval\n",
+      "    @ .\\boot.jl:360 [inlined]\n",
+      " [11] include_string(mapexpr::typeof(REPL.softscope), mod::Module, code::String, filename::String)\n",
+      "    @ Base .\\loading.jl:1094\n",
+      " [12] #invokelatest#2\n",
+      "    @ .\\essentials.jl:708 [inlined]\n",
+      " [13] invokelatest\n",
+      "    @ .\\essentials.jl:706 [inlined]\n",
+      " [14] (::VSCodeServer.var\"#146#147\"{VSCodeServer.NotebookRunCellArguments, String})()\n",
+      "    @ VSCodeServer ~\\.vscode\\extensions\\julialang.language-julia-1.5.10\\scripts\\packages\\VSCodeServer\\src\\serve_notebook.jl:18\n",
+      " [15] withpath(f::VSCodeServer.var\"#146#147\"{VSCodeServer.NotebookRunCellArguments, String}, path::String)\n",
+      "    @ VSCodeServer ~\\.vscode\\extensions\\julialang.language-julia-1.5.10\\scripts\\packages\\VSCodeServer\\src\\repl.jl:185\n",
+      " [16] notebook_runcell_request(conn::VSCodeServer.JSONRPC.JSONRPCEndpoint{Base.PipeEndpoint, Base.PipeEndpoint}, params::VSCodeServer.NotebookRunCellArguments)\n",
+      "    @ VSCodeServer ~\\.vscode\\extensions\\julialang.language-julia-1.5.10\\scripts\\packages\\VSCodeServer\\src\\serve_notebook.jl:14\n",
+      " [17] dispatch_msg(x::VSCodeServer.JSONRPC.JSONRPCEndpoint{Base.PipeEndpoint, Base.PipeEndpoint}, dispatcher::VSCodeServer.JSONRPC.MsgDispatcher, msg::Dict{String, Any})\n",
+      "    @ VSCodeServer.JSONRPC ~\\.vscode\\extensions\\julialang.language-julia-1.5.10\\scripts\\packages\\JSONRPC\\src\\typed.jl:67\n",
+      " [18] serve_notebook(pipename::String; crashreporting_pipename::String)\n",
+      "    @ VSCodeServer ~\\.vscode\\extensions\\julialang.language-julia-1.5.10\\scripts\\packages\\VSCodeServer\\src\\serve_notebook.jl:94\n",
+      " [19] top-level scope\n",
+      "    @ ~\\.vscode\\extensions\\julialang.language-julia-1.5.10\\scripts\\notebook\\notebook.jl:12\n",
+      " [20] include(mod::Module, _path::String)\n",
+      "    @ Base .\\Base.jl:386\n",
+      " [21] exec_options(opts::Base.JLOptions)\n",
+      "    @ Base .\\client.jl:285\n",
+      " [22] _start()\n",
+      "    @ Base .\\client.jl:485"
+     ]
+    }
+   ],
    "source": [
     "#read from big endian\n",
     "A_tmp = Matrix{Float32}(undef, 721, 1441)\n",
