Fixed C182T's powerplant location

--- a/sketches/c182.ipynb
+++ b/sketches/c182.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -18,9 +18,7 @@
    "source": [
     "using Flight\n",
     "using Unitful\n",
-    "using StaticArrays\n",
-    "\n",
-    "q = RQuat()"
+    "using StaticArrays\n"
    ]
   },
   {
@@ -34,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -157,33 +155,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "┌ Error: Failed to revise c:\\Users\\Miguel\\Repos\\Julia\\Flight\\src\\c182t.jl\n",
-      "│   exception = Revise.ReviseEvalException(\"c:\\\\Users\\\\Miguel\\\\Repos\\\\Julia\\\\Flight\\\\src\\\\c182t.jl:36\", ErrorException(\"invalid redefinition of constant Ldg\"), Any[(top-level scope at c182t.jl:36, 1)])\n",
-      "└ @ Revise C:\\Users\\Miguel\\.julia\\packages\\Revise\\OgnOk\\src\\packagedef.jl:707\n",
-      "┌ Warning: The running code does not match the saved version for the following files:\n",
-      "│ \n",
-      "│   c:\\Users\\Miguel\\Repos\\Julia\\Flight\\src\\c182t.jl\n",
-      "│ \n",
-      "│ If the error was due to evaluation order, it can sometimes be resolved by calling `Revise.retry()`.\n",
-      "│ Use Revise.errors() to report errors again. Only the first error in each file is shown.\n",
-      "│ Your prompt color may be yellow until the errors are resolved.\n",
-      "└ @ Revise C:\\Users\\Miguel\\.julia\\packages\\Revise\\OgnOk\\src\\packagedef.jl:817\n"
+      "r_ObN_b = [1.27, -4.009567099216383e-16, 2.00406]\n",
+      "r_ObP_b = [2.05486, -3.536755463001573e-16, 0.8331199999999999]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
        "3-element SVector{3, Float64} with indices SOneTo(3):\n",
-       "  1.27\n",
-       " -4.009567099216383e-16\n",
-       "  2.00406"
+       "  2.05486\n",
+       " -3.536755463001573e-16\n",
+       "  0.8331199999999999"
       ]
      },
      "metadata": {},
@@ -204,7 +193,7 @@
     "r_ObR_b = fromJSBSim([58.2, 43, -15.5])\n",
     "r_ObP_b = fromJSBSim([-37.7, 0, 26.6])\n",
     "\n",
-    "@show r_ObN_b"
+    "@show r_ObG0_b r_ObP_b"
    ]
   },
   {
