Renamed Controls to Avionics

--- a/sketches/c182_points.ipynb
+++ b/sketches/c182_points.ipynb
@@ -155,14 +155,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "r_ObN_b = [1.27, -4.009567099216383e-16, 2.00406]\n",
+      "r_ObG0_b = [0.05588000000000015, -7.807613203284035e-17, 0.58166]\n",
       "r_ObP_b = [2.05486, -3.536755463001573e-16, 0.8331199999999999]\n"
      ]
     },
