Implemented propeller coefficient computation

--- a/sketches/propeller_book.ipynb
+++ b/sketches/propeller_book.ipynb
@@ -32,36 +32,39 @@
     "Given $K_c(\\zeta)$ and $\\alpha_0(\\zeta)$, we directly obtain $\\beta(\\zeta)$, which is what we need for\n",
     "further computations.\n",
     "\n",
-    "## Airflow-related distributions\n",
+    "We must provide these as functions of $\\zeta$. If they are tabulated, then we return a callable\n",
+    "interpolator from Interpolations.jl or a function wrapper around it.\n",
     "\n",
-    "Total downwash angle ($\\varepsilon$): Angle measured from the propeller plane to the local airflow.\n",
+    "## Airflow-related distributions\n",
     "\n",
     "Advance angle ($\\varepsilon_\\infty$): Downwash angle due to the axial propeller aerodynamic\n",
     "velocity.\n",
     "\n",
-    "Induced angle ($\\varepsilon_\\infty$): Downwash angle due to the axial propeller aerodynamic velocity.\n",
+    "Induced angle ($\\varepsilon_i$): Downwash angle due to the induced velocity.\n",
+    "\n",
+    "Total downwash angle ($\\varepsilon$): Angle measured from the propeller plane to the local airflow.\n",
+    "\n",
+    "$\\varepsilon(\\zeta) = \\varepsilon_\\infty(\\zeta) + \\varepsilon_i(\\zeta)$\n",
     "\n",
     "Angle of attack ($\\alpha$): Angle measured from the local airflow to the section's airfoil\n",
     "zero-lift line.\n",
     "\n",
-    "$\\alpha(\\zeta) = \\beta(\\varepsilon) - \\varepsilon(\\zeta)j$\n",
+    "$\\alpha(\\zeta) = \\beta(\\zeta) - \\varepsilon(\\zeta)$\n",
     "\n",
-    "\n",
-    "Aerodynamic angle of attack ($\\alpha$): Angle measured from the section's airfoil zero-lift line to\n",
-    "the local airflow.\n",
-    "\n",
-    "\n",
-    "Specified parameters:\n",
-    "$K_c(\\zeta), \\alpha_0(\\zeta)$\n",
-    "\n",
-    "We must provide these as functions of $\\zeta$. If they are tabulated, then we return a callable\n",
-    "interpolator from Interpolations.jl or a function wrapper around it.\n",
     "\n",
     "Airflow parameters:\n",
     "Propeller angle of attack: $\\alpha_p$\n",
     "Propeller angle of sideslip: $\\beta_p$\n",
     "\n",
-    "$K_c$ - $\\beta_c$ - $\\beta$ - $\\varepsilon$ - $"
+    "Shut up and calculate.\n",
+    "Definir una combinacion de J, alphap y betap\n",
+    "\n",
+    "Tomar un valor de zeta. Calcular eps_inf. Calcular beta_c a partir de Kc. Con beta_c y alpha_0, calcular beta. A partir de aqui ya tenemos que resolver la ecuacion numericamente. Sus parametros a congelar son beta, eps_inf, cbhat, zeta, betat (que me la precalculo para toda la pala) y k\n",
+    "\n",
+    "Para especificar la helice, tambien tendria que dar cb y R. Pero es mas comodo dar un cb adimensional. El problema es que el cb hat del libro incluye el numero de palas. Me podria definir un cb_bar que no lo incluya. Definir los dos para evitar cagadas. Yo doy cbar pero obligo a calcular cbhat\n",
+    "\n",
+    "\n",
+    "<!-- Definir v_wOp_p. Calcular Vinf, alpha_p, beta_p -->"
    ]
   },
   {
