--- a/doc/io360.md
+++ b/doc/io360.md
@@ -1,71 +1,140 @@
 ### Power and SFC Computation for Lycoming IO 360
 
 References:
-Lycoming IO-360 Operator's Manual, Figure 3-21
+Lycoming IO-360 Operator's Manual, Figures 3-21 & 3-5
+Internal Combustion Engine Fundamentals (Second Edition)
 Kevin Horton's Spreadsheets: https://vansairforce.net/community/showthread.php?t=61330
 
+## ISA Relations
 
-In a spark ignition engine, manifold air pressure (MAP) is a function of RPM, throttle position and air density:
-$$MAP = MAP(n, thr, \rho)$$
+The ISA model relates ambient pressure and temperature at a given geopotential altitude $h$ with their corresponding values at sea level, $p_{sl}$ and $T_{sl}$:
+$$\dfrac{T}{T_{sl}} = 1 + \dfrac{\beta}{T_{sl}} h$$
+$$\dfrac{p}{p_{sl}} = \left( 1 + \dfrac{\beta}{T_{sl}} h\right)^{-\dfrac{g_{sl}}{\beta R}} = \left(\dfrac{T}{T_{sl}} \right)^{-\dfrac{g_{sl}}{\beta R}}$$
 
-Brake power is a function of $RPM$, $MAP$, and air density:
-$$P = P(n, MAP, \rho) = P(n, MAP(n, thr, \rho), \rho) = P(n, thr, \rho)$$
+For the first ISA layer ($h<11000 m$), when the sea level conditions are ISA standard conditions:
+$$p = p_{std}\left( 1 + \dfrac{\beta}{T_{std}} h\right)^{-\dfrac{g_{sl}}{\beta R}}$$
+$$T = T_{std}\left( \dfrac{p}{p_{std}} \right)^{-\dfrac{\beta R}{g_{sl}}}$$
 
-For ISA sea level conditions, we can define:
-<!-- $$MAP_{sl} = MAP(n, thr, \rho_{sl}) =  MAP_{sl}(n, thr) -->
-$$P_{sl} = P(n, MAP, \rho_{sl}) = P_{sl}(n, MAP)$$
+From these we can define the following functions:
+$$p_{ISA}(h) := p_{std}\left( 1 + \dfrac{\beta}{T_{std}} h\right)^{-\dfrac{g_{sl}}{\beta R}}$$
+$$T_{ISA}(p) = T_{std}\left( \dfrac{p}{p_{std}} \right)^{-\dfrac{\beta R}{g_{sl}}}$$
+
+The first one gives the static ambient pressure one would encounter at an altitude $h$ if the sea level conditions were standard ISA conditions. This function can be used to compute the static pressure $p$ corresponding to the pressure altitudes used by Figure 3-21.
+
+The second one gives the temperature one would encounter at an altitude at which the static pressure is $p$ if the sea level conditions were standard conditions.
+
+## Power at ISA Temperature
+
+Figure 3-21 shows that in general engine power is a function of engine RPM (n), manifold air pressure (MAP), ambient pressure and ambient temperature:
+
+$$P = P(n, MAP, p, T)$$
+
+We can define:
+$$\tilde{P} := P(n, MAP, p, T_{ISA}(p)) = \tilde{P}(n,MAP,p)$$
+
+This eliminates the dependence of engine power on temperature by constraining $T$ to a corresponding $p$ through the function $T_{ISA}(p)$. The engine power values plotted in Figure 3-21 belong to this specific $T = T_{ISA}(p)$ subdomain. Therefore, any power value we calculate from Figure 3-21 will be $\tilde{P}(n,MAP,p)=P(n,MAP,p,T_{ISA}(p))$.
+
+To obtain the actual power for an arbitrary temperature $P(n,MAP,p,T)$, we need to relate it to the $\tilde{P}(n,MAP,p)$ computed from Figure 3-21. Fortunately, this relation is straightforward and it is given by Figure 3-21 as:
+$$P(n,MAP,p,T) = P\left(n,MAP,p,T_{ISA}(p)\right) \sqrt{\dfrac{T_{ISA}(p)}{T}} = \tilde{P}(n,MAP,p)\sqrt{\dfrac{T_{ISA}(p)}{T}}$$
+
+A justification is given in *Internal Combustion Engine Fundamentals*, Section 2.12. Engine power can be expressed as:
+$$P = \eta_{f,b} Q_{HV} \chi_{f} \dot{m}_a$$
+
+Where $\eta_{f,b}$ is the brake fuel conversion efficiency, $Q_{HV}$ is the fuel's heating value, $\chi_f$ is the fuel/air ratio and $\dot{m}_a$ is the air mass flow rate entering the engine.
+
+At wide-open throttle, the flow through the inlet duct can be modeled as an isentropic flow. The mass flow ratio is:
+$$\dot{m}_a =
+A_e \dfrac{p}{\sqrt{RT}}\sqrt{\dfrac{2\gamma}{\gamma -1} \left[ \left(\dfrac{p}{p_s}\right)^{-2/\gamma} - \left(\dfrac{p}{p_s}\right)^{-(\gamma+1)/\gamma}\right]}
+$$
+
+Where $p$ and $T$ are the total (stagnation) pressure and temperature in the duct (respectively equal to the ambient static pressure and temperature), $p_s$ is the static pressure measured at some section inside the duct, and $A_e$ is an equivalent area corresponding to that section.
+
+More generally, the mass flow ratio satisfies:
+$$\dot{m}_a \propto \dfrac{p}{\sqrt{T}}$$
+
+Since the only term in $P = \eta_{f,b} Q_{HV} \chi_{f} \dot{m}_a$ that depends significantly on $T$ is $\dot{m}_a$, we can write:
+$$P \propto \dfrac{p}{\sqrt{T}}$$
+
+From this:
+$$\dfrac{P(n,MAP,p,T)}{P(n,MAP,p,T_{ISA}(p))} = \dfrac{P(n,MAP,p,T)}{\tilde{P}(n,MAP,p)} = \sqrt{\dfrac{T_{ISA}(p)}{T}}$$
+
+## Computing $\tilde{P}$
+
+Returning to $\tilde{P}$ we have:
+$$\tilde{P} = \tilde{P}(n, MAP, p)$$
+
+At standard sea level pressure, for an arbitrary throttle setting, we have:
+$$\tilde{P}_{std} = \tilde{P}(n, MAP, p_{std}) = \tilde{P}_{std}(n, MAP)$$
 
 This function is shown on Figure 3-21 (Left), with $MAP$ on the x axis and $P$ on the y axis, for different values of $n$.
 
-<!-- At SL conditions, the $MAP$ for each throttle setting has specific limits -->
+From Figure 3-21 (Right) we can see that, for a given engine speed $n$, the MAP at wide-open throttle is fully determined by altitude $h$. Or equivalently, by the pressure $p$ related to $h$ through $p_{ISA}(h)$. Let:
+$$MAP_{wot} = MAP_{wot}(n, p)$$
 
-For $thr = 1$ (full throttle) we have:
-$$MAP_{full} = MAP(n, 1, \rho)= MAP_{full}(n, \rho)$$
+This relation between wide-open throttle $MAP$ and $p$ is one-to-one. Therefore, it can be inverted to yield the following function:
+$$p_{wot} = p_{wot}(n, MAP)$$
 
-That is, for each $n$, the full throttle $MAP$ value is determined by air density. This relation between full throttle $MAP$ and $\rho$ is one-to-one. Therefore, it can be inverted to yield the following function:
-
-$$\rho_{full} = \rho_{full}(n, MAP)$$
-
-Thus, for each $n$ there is a density value $\rho_{full}$ for which a given $MAP$ value is the full throttle $MAP$, which we denoted $MAP_full$.
-
-Because $\rho$ is a function of (geopotential) altitude, there is an equivalent relation:
-$$h_{full} = h_{full}(n, MAP)$$
+Thus, for each $n$ there is a pressure value $p_{wot}$ for which a given $MAP$ value is the wide-open throttle $MAP$, which we denoted $MAP_{wot}$.
 
 We can also define:
-$$P_{full}(n, MAP) = P(n, MAP, \rho_{full}(n, MAP))$$
+$$\tilde{P}_{wot}(n, MAP) := \tilde{P}(n, MAP, p_{wot}(n, MAP))$$
 
-This is the power output of the engine at a given $n$ and $MAP$ when it is operated at full throttle, that is, when that $MAP$ is the full throttle $MAP$. This occurs at an air density given by $\rho_{full}$
+This is the power output of the engine at a given $n$ and $MAP$ when it is operated at wide-open throttle, that is, when that $MAP$ is the wide-open throttle $MAP$. This occurs at an ambient pressure given by $p_{wot}$.
 
-Both $h_{full}(n, MAP)$ and $P_{full}(n, \rho)$ are provided by Figure 3-21 (Right).
+Both $p_{wot}(n, MAP)$ and $\tilde{P}_{wot}(n, p)$ are provided by Figure 3-21 (Right).
 
-For ISA conditions, pressure altitude and geopotential altitude are equivalent. Therefore, the $\rho$ values corresponding to the $h$ values in the figure can be obtained directly by evaluating the ISA model for those values and standard sea level conditions.
+Our goal is to compute $\tilde{P}(n, MAP, p)$ for the general case. For this, we can write:
+$$\tilde{P}(n, MAP, p) \approx \tilde{P}(n, MAP, p_{std}) + \left.\dfrac{\partial \tilde{P}}{\partial p}\right|_{n,MAP,p_{std}}(p - p_{std})$$
 
-Our goal is to compute $P(n, MAP, \rho)$ for the general case. For this, we can write:
-$$P(n, MAP, \rho) \approx P(n, MAP, \rho_{sl}) + \left.\dfrac{\partial P}{\partial \rho}\right|_{n,MAP,\rho_{sl}}(\rho - \rho_{sl})$$
+The first term is directly available from Figure 3-21 (Left).
 
-The first term is directly available from the left figure.
+For the second term, we can estimate the derivative at $p_{std}$ as:
+$$\left.\dfrac{\partial \tilde{P}}{\partial p}\right|_{n,MAP,p_{std}}\approx \frac{\tilde{P}_{ref}(n,MAP) - \tilde{P}(n,MAP,p_{std})}{p_{ref} - p_{std}}$$
 
-For the second term, we can estimate the derivative at $\rho_sl$ as:
-$$\left.\dfrac{\partial P}{\partial \rho}\right|_{n,MAP,\rho_{sl}}\approx \frac{P_{ref}(n,MAP) - P(n,MAP,\rho_{sl})}{\rho_{ref} - \rho_{sl}}$$
+Where $p_{ref}$ denotes some arbitrary pressure and $\tilde{P}_{ref}(n,MAP)$ is the corresponding power output.
 
-Where $\rho_{ref}$ denotes some arbitrary density and $P_{ref}(n,MAP)$ is the corresponding power output.
+We can choose $p_{ref} = p_{wot}(n, MAP)$, that is, a pressure such that $MAP$ is the wide-open throttle $MAP$. In that case, the power output $\tilde{P}_{ref}(n,MAP)$ must be:
 
-We can choose $\rho_{ref} = \rho_{full}(n, MAP)$, that is, a density such that $MAP$ is the full throttle $MAP$. In that case, the power output $P_{ref}(n,MAP)$ must be:
+$$\tilde{P}_{ref}(n,MAP) = \tilde{P}(n, MAP, p_{wot}(n, MAP)) = \tilde{P}_{wot}(n,MAP)$$
 
-$$P_{ref}(n,MAP) = P(n, MAP, \rho_{full}(n, MAP)) = P_{full}(n,MAP)$$
+Both $p_{wot}$ and $\tilde{P}_{wot}$ can be obtained from Figure 3-21 (Right).
 
-Both $\rho_{full}$ and $P_{full}$ can be obtained from Figure 3-21 (Right)
+## Throttle to MAP
 
-The right figure assumes a temperature variation with $\rho$ (or $h$) corresponding to an ISA model. Thus, the $P(n, MAP, \rho)$ obtained so far must be corrected as follows:
-$$P_{corr} = P \sqrt{\dfrac{T_{ISA}}{T}}$$
+Our input to the engine is not a $MAP$ value, but a throttle setting $thr$. What should the relation between the engine throttle input and the actual $MAP$ be in each operating condition? For each $(n, p)$ combination, the right graph gives us $MAP_{wot}$. Then we simply compute:
 
-Where $T_{ISA}$ is the temperature corresponding to the actual $\rho$ (or $h$) for ISA conditions, and $T$ is the actual temperature. We can compute $T_{ISA}$ by evaluating the ISA model with our current geopotential altitude and standard sea level conditions:
-ISAData(AltGeop(kinematics.pos.h_orth), SLConditions())
+$$MAP(thr, p, n) = MAP_{idle} + thr * \left(MAP_{wot}(n,p) - MAP_{idle}\right)$$
+
+Where $MAP_{idle}$ is a suitably chosen idle $MAP$ value, for example $12 \ inHg$.
+
+With this relation, engine power becomes a function of the form:
+$$P = P(n, MAP, T, p) = P(thr, n, p, T)$$
+
+## Continuous Operation Limits
+
+Both graphs in Fig. 3-21 show a line labelled "limiting manifold pressure for continuous operation". From looking at both graphs, it is apparent that this line actually enforces a maximum power for each $n$. That is, it defines a function $\tilde{P}_{lim}(n)$
+
+So far we have ignored this limit when computing $\tilde{P}$, so we may obtain values $\tilde{P} > \tilde{P}_{lim}(n)$. In principle, this power limitation is not enforced by the engine itself; they are under the pilot's responsibility. Therefore, we can choose to ignore them when modeling the engine. But we can also easily simulate the observation of these limits by setting $\tilde{P} = min\{\tilde{P}, \tilde{P}_{lim}(n)\}$.
+
+## Computing $P$
+
+Finally, we recover $P$ from $\tilde{P}$ with:
+$$P(n,MAP,p,T) = \tilde{P}(n,MAP,p) \sqrt{\dfrac{T_{ISA}(p)}{T}}$$
+
+Where:
+
+$$T_{ISA}(p) = T_{std}\left( \dfrac{p}{p_{std}} \right)^{-\dfrac{\beta R}{g_{sl}}}$$
+
+## Effect of Mixture
 
 Figure 3-21 assumes maximum power mixture ($mix = 1$). We can use the ratios in figure 3-1 to scale down the power output for $mix \in [0,1]$.
 
+## Fuel consumption
+
 Figure 3-5 provides fuel consumption as:
 $$\dot{m} = \dot{m}(n,P,mix)$$
+
+Where $P$ is the actual engine power output. This could be
 
 
 To model any fuel injected piston engine in the Lycoming lineup, for example IO-540, non-dimensionalize:
