Working on IO360 performance model

--- a/doc/io360.md
+++ b/doc/io360.md
@@ -103,9 +103,9 @@ Both $p_{wot}$ and $\tilde{P}_{wot}$ can be obtained from Figure 3-21 (Right).
 
 Our input to the engine is not a $MAP$ value, but a throttle setting $thr$. What should the relation between the engine throttle input and the actual $MAP$ be in each operating condition? For each $(n, p)$ combination, the right graph gives us $MAP_{wot}$. Then we simply compute:
 
-$$MAP(thr, p, n) = MAP_{idle} + thr * \left(MAP_{wot}(n,p) - MAP_{idle}\right)$$
+$$MAP(thr, p, n) = MAP_{wot} \left(k + thr (1 - k)\right)$$
 
-Where $MAP_{idle}$ is a suitably chosen idle $MAP$ value, for example $12 \ inHg$.
+Where $k$ is a suitably chosen idle $MAP_{idle}/MAP_{wot}$ ratio, for example 0.4$.
 
 With this relation, engine power becomes a function of the form:
 $$P = P(n, MAP, T, p) = P(thr, n, p, T)$$
