Progress on piston engine model

--- a/doc/io360.md
+++ b/doc/io360.md
@@ -9,121 +9,138 @@ Kevin Horton's Spreadsheets: https://vansairforce.net/community/showthread.php?t
 
 The ISA model relates ambient pressure and temperature at a given geopotential altitude $h$ with their corresponding values at sea level, $p_{sl}$ and $T_{sl}$:
 $$\dfrac{T}{T_{sl}} = 1 + \dfrac{\beta}{T_{sl}} h$$
-$$\dfrac{p}{p_{sl}} = \left( 1 + \dfrac{\beta}{T_{sl}} h\right)^{-\dfrac{g_{sl}}{\beta R}} = \left(\dfrac{T}{T_{sl}} \right)^{-\dfrac{g_{sl}}{\beta R}}$$
+$$\dfrac{p}{p_{sl}} = \left( 1 + \dfrac{\beta}{T_{sl}} h\right)^{-\dfrac{g_{std}}{\beta R}} = \left(\dfrac{T}{T_{sl}} \right)^{-\dfrac{g_{std}}{\beta R}}$$
 
 For the first ISA layer ($h<11000 m$), when the sea level conditions are ISA standard conditions:
-$$p = p_{std}\left( 1 + \dfrac{\beta}{T_{std}} h\right)^{-\dfrac{g_{sl}}{\beta R}}$$
-$$T = T_{std}\left( \dfrac{p}{p_{std}} \right)^{-\dfrac{\beta R}{g_{sl}}}$$
+$$p = p_{std}\left( 1 + \dfrac{\beta}{T_{std}} h\right)^{-\dfrac{g_{std}}{\beta R}}$$
+$$T = T_{std}\left( \dfrac{p}{p_{std}} \right)^{-\dfrac{\beta R}{g_{std}}}$$
 
 From these we can define the following functions:
-$$p_{ISA}(h) := p_{std}\left( 1 + \dfrac{\beta}{T_{std}} h\right)^{-\dfrac{g_{sl}}{\beta R}}$$
-$$T_{ISA}(p) = T_{std}\left( \dfrac{p}{p_{std}} \right)^{-\dfrac{\beta R}{g_{sl}}}$$
+$$p_{ISA}(h) := p_{std}\left( 1 + \dfrac{\beta}{T_{std}} h\right)^{-\dfrac{g_{std}}{\beta R}}$$
+$$T_{ISA}(p) = T_{std}\left( \dfrac{p}{p_{std}} \right)^{-\dfrac{\beta R}{g_{std}}}$$
 
 The first one gives the static ambient pressure one would encounter at an altitude $h$ if the sea level conditions were standard ISA conditions. This function can be used to compute the static pressure $p$ corresponding to the pressure altitudes used by Figure 3-21.
 
 The second one gives the temperature one would encounter at an altitude at which the static pressure is $p$ if the sea level conditions were standard conditions.
 
-## Power at ISA Temperature
 
-Figure 3-21 shows that in general engine power is a function of engine RPM (n), manifold air pressure (MAP), ambient pressure and ambient temperature:
+## Engine Brake Power Output
 
-$$P = P(n, MAP, p, T)$$
+From theory, we know that engine power is a function of engine speed ($\omega$), manifold air pressure ($MAP$), ambient pressure $p$ and ambient temperature $T$:
 
-We can define:
-$$\tilde{P} := P(n, MAP, p, T_{ISA}(p)) = \tilde{P}(n,MAP,p)$$
+$$P = P(\omega, MAP, p, T)$$
 
-This eliminates the dependence of engine power on temperature by constraining $T$ to a corresponding $p$ through the function $T_{ISA}(p)$. The engine power values plotted in Figure 3-21 belong to this specific $T = T_{ISA}(p)$ subdomain. Therefore, any power value we calculate from Figure 3-21 will be $\tilde{P}(n,MAP,p)=P(n,MAP,p,T_{ISA}(p))$.
-
-To obtain the actual power for an arbitrary temperature $P(n,MAP,p,T)$, we need to relate it to the $\tilde{P}(n,MAP,p)$ computed from Figure 3-21. Fortunately, this relation is straightforward and it is given by Figure 3-21 as:
-$$P(n,MAP,p,T) = P\left(n,MAP,p,T_{ISA}(p)\right) \sqrt{\dfrac{T_{ISA}(p)}{T}} = \tilde{P}(n,MAP,p)\sqrt{\dfrac{T_{ISA}(p)}{T}}$$
-
-A justification is given in *Internal Combustion Engine Fundamentals*, Section 2.12. Engine power can be expressed as:
+More specifically, engine power can be expressed as follows (see *Internal Combustion Engine Fundamentals*, Section 2.12. E):
 $$P = \eta_{f,b} Q_{HV} \chi_{f} \dot{m}_a$$
 
 Where $\eta_{f,b}$ is the brake fuel conversion efficiency, $Q_{HV}$ is the fuel's heating value, $\chi_f$ is the fuel/air ratio and $\dot{m}_a$ is the air mass flow rate entering the engine.
 
-At wide-open throttle, the flow through the inlet duct can be modeled as an isentropic flow. The mass flow ratio is:
+The air flow through the inlet duct can be modeled as an isentropic flow. Therefore, air mass flow ratio can be expressed as:
 $$\dot{m}_a =
 A_e \dfrac{p}{\sqrt{RT}}\sqrt{\dfrac{2\gamma}{\gamma -1} \left[ \left(\dfrac{p}{p_s}\right)^{-2/\gamma} - \left(\dfrac{p}{p_s}\right)^{-(\gamma+1)/\gamma}\right]}
 $$
 
 Where $p$ and $T$ are the total (stagnation) pressure and temperature in the duct (respectively equal to the ambient static pressure and temperature), $p_s$ is the static pressure measured at some section inside the duct, and $A_e$ is an equivalent area corresponding to that section.
 
-More generally, the mass flow ratio satisfies:
+For a given throttle setting and engine speed, the ratio $p/p_s$ can be assumed to be constant. Under these conditions, we have:
 $$\dot{m}_a \propto \dfrac{p}{\sqrt{T}}$$
 
-Since the only term in $P = \eta_{f,b} Q_{HV} \chi_{f} \dot{m}_a$ that depends significantly on $T$ is $\dot{m}_a$, we can write:
-$$P \propto \dfrac{p}{\sqrt{T}}$$
+And therefore:
+$$P \propto \dfrac{p}{\sqrt{T}} = \dfrac{p}{\sqrt{T_{ISA}}}\sqrt{\dfrac{T_{ISA}}{T}} \propto
+\dfrac{p/p_{std}}{\sqrt{T_{ISA}/T_{std}}}\sqrt{\dfrac{T_{ISA}}{T}}$$
 
-From this:
-$$\dfrac{P(n,MAP,p,T)}{P(n,MAP,p,T_{ISA}(p))} = \dfrac{P(n,MAP,p,T)}{\tilde{P}(n,MAP,p)} = \sqrt{\dfrac{T_{ISA}(p)}{T}}$$
+For convenience, we define the following non-dimensional quantity:
+$$\delta =\dfrac{p/p_{std}}{\sqrt{T_{ISA}/T_{std}}}$$
 
-## Computing $\tilde{P}$
+Then:
+$$P \propto  \delta \sqrt{\dfrac{T_{ISA}}{T}}$$
 
-Returning to $\tilde{P}$ we have:
-$$\tilde{P} = \tilde{P}(n, MAP, p)$$
+Now, introducing $T_{ISA}(p)$ we have the following relation:
+$$\delta(p) =\dfrac{p/p_{std}}{\sqrt{T_{ISA}(p)/T_{std}}} =
+\dfrac{p}{p_{std}} \left(\dfrac{T_{ISA}(p)}{T_{std}}\right) ^{-\dfrac{1}{2}} =
+ \dfrac{p}{p_{std}} \left( \dfrac{p}{p_{std}} \right)^{\dfrac{\beta R}{2g_{std}}}=
+ \left( \dfrac{p}{p_{std}} \right)^{1+\dfrac{\beta R}{2g_{std}}}$$
 
-At standard sea level pressure, for an arbitrary throttle setting, we have:
-$$\tilde{P}_{std} = \tilde{P}(n, MAP, p_{std}) = \tilde{P}_{std}(n, MAP)$$
+Since $\delta = \delta(p)$, we can write, without loss of generality:
+$$P(n,MAP,p,T) =P(n,MAP,\delta(p),T) = P(n, MAP, \delta, T)$$
 
-This function is shown on Figure 3-21 (Left), with $MAP$ on the x axis and $P$ on the y axis, for different values of $n$.
+$$\dfrac{P(n,MAP,\delta,T)}{P(n,MAP,\delta,T_{ISA})} \propto
+\dfrac{\delta \sqrt{\dfrac{T_{ISA}}{T}}}{\delta \sqrt{\dfrac{T_{ISA}}{T_{ISA}}}} = \sqrt{\dfrac{T_{ISA}}{T}}$$
 
-From Figure 3-21 (Right) we can see that, for a given engine speed $n$, the MAP at wide-open throttle is fully determined by altitude $h$. Or equivalently, by the pressure $p$ related to $h$ through $p_{ISA}(h)$. Let:
-$$MAP_{wot} = MAP_{wot}(n, p)$$
+All power values in Figure 3-21 are valid for $T_{ISA}$, and therefore so will be the result of any calculation using it. The actual $P(n,MAP,\delta,T)$ for an arbitrary $T$ is then computed as:
+$$P(\omega,MAP,\delta,T) = P_{ISA}(\omega,MAP,\delta)\sqrt{\dfrac{T_{ISA}}{T}}$$
 
-This relation between wide-open throttle $MAP$ and $p$ is one-to-one. Therefore, it can be inverted to yield the following function:
-$$p_{wot} = p_{wot}(n, MAP)$$
+Where:
+$$P_{ISA}(\omega, MAP, \delta) := P(\omega, MAP, \delta, T_{ISA})$$
 
-Thus, for each $n$ there is a pressure value $p_{wot}$ for which a given $MAP$ value is the wide-open throttle $MAP$, which we denoted $MAP_{wot}$.
+## Wide-Open Throttle Power at Altitude
+The right graph in Figure 3-21 provides $P_{ISA,wot}(\omega,h)$, that is, the brake power produced by the engine at wide-open throttle as a function of altitude $h$ for each engine speed $n$, under the assumption $p = p_{ISA}(h)$ and $T = T_{ISA}(h)$. Although this function appears linear in $h$ for each $n$ it actually isn't, because the x-axis is not uniformly scaled. This non-linearity is to be expected. We know from theory that, for a given $n$ and throttle setting (wide-open throttle in this case), $P_{ISA}(\delta)$ is a linear function. Since $\delta = \delta(p) = \delta(p(h))$ is non-linear, so must be $P_{ISA}(h)$.
 
-We can also define:
-$$\tilde{P}_{wot}(n, MAP) := \tilde{P}(n, MAP, p_{wot}(n, MAP))$$
+For convenience, we would like to replace $h$ with $\delta$ as the x-axis variable. To do this, for each $h$ value we simply evaluate:
+$$\delta(h) = \delta(p(h)) = \delta(p_{ISA}(h)) = \dfrac{p_{ISA}(h)/p_{std}}{\sqrt{T_{ISA}(h)/T_{std}}}$$
 
-This is the power output of the engine at a given $n$ and $MAP$ when it is operated at wide-open throttle, that is, when that $MAP$ is the wide-open throttle $MAP$. This occurs at an ambient pressure given by $p_{wot}$.
+When using the engine model, we will get $p$ as an input rather than $h$. The corresponding $\delta$ to be entered into the performance tables is given simply by the previous expression:
+$$\delta({p}) = \left( \dfrac{p}{p_{std}} \right)^{1+\dfrac{\beta R}{2g_{std}}}$$
 
-Both $p_{wot}(n, MAP)$ and $\tilde{P}_{wot}(n, p)$ are provided by Figure 3-21 (Right).
+The linearity of $P_{ISA,wot}(\omega, \delta)$ with $\delta$ allows us to construct a linear interpolation for it using only two values $P_{ISA,wot}(\omega, \delta_1)$ and $P_{ISA,wot}(\omega, \delta_2)$ for each $n$, where $\delta_1 = \delta_{std}$.
 
-Our goal is to compute $\tilde{P}(n, MAP, p)$ for the general case. For this, we can write:
-$$\tilde{P}(n, MAP, p) \approx \tilde{P}(n, MAP, p_{std}) + \left.\dfrac{\partial \tilde{P}}{\partial p}\right|_{n,MAP,p_{std}}(p - p_{std})$$
+From the right graph in Figure 3-21  we can see that, for a given engine speed $\omega$, the MAP at wide-open throttle is fully determined by altitude $h$ or, equivalently, by $\delta$. Let:
+$$MAP_{wot} = MAP_{wot}(\omega, \delta)$$
 
-The first term is directly available from Figure 3-21 (Left).
+This relation between wide-open throttle $MAP$ and $\delta$ is one-to-one. Thus, for each $\omega$ and $MAP$ combination, there is a $\delta$ value $\delta_{wot}(\omega, MAP)$ for which $MAP$ is the wide-open throttle $MAP$. This inverse function is:
+$$\delta_{wot} = \delta_{wot}(\omega, MAP)$$
 
-For the second term, we can estimate the derivative at $p_{std}$ as:
-$$\left.\dfrac{\partial \tilde{P}}{\partial p}\right|_{n,MAP,p_{std}}\approx \frac{\tilde{P}_{ref}(n,MAP) - \tilde{P}(n,MAP,p_{std})}{p_{ref} - p_{std}}$$
+The power output of the engine at a given $\omega$ and $\delta$ combination when operated at wide-open throttle is a function $P_{ISA,wot}(\omega, \delta)$, which can also be constructed from the right graph.
 
-Where $p_{ref}$ denotes some arbitrary pressure and $\tilde{P}_{ref}(n,MAP)$ is the corresponding power output.
+## Part Throttle Power at Standard Conditions
 
-We can choose $p_{ref} = p_{wot}(n, MAP)$, that is, a pressure such that $MAP$ is the wide-open throttle $MAP$. In that case, the power output $\tilde{P}_{ref}(n,MAP)$ must be:
+At standard sea level conditions, for an arbitrary throttle setting, we have:
+$$P_{ISA,std}(\omega, MAP) = P_{ISA}(\omega, MAP, \delta_{std})$$
 
-$$\tilde{P}_{ref}(n,MAP) = \tilde{P}(n, MAP, p_{wot}(n, MAP)) = \tilde{P}_{wot}(n,MAP)$$
+This function is provided by the left graph in Figure 3-21, with $MAP$ on the x axis and $P$ on the y axis, for different values of $n$.
 
-Both $p_{wot}$ and $\tilde{P}_{wot}$ can be obtained from Figure 3-21 (Right).
+## Part Throttle Power at Altitude
+
+Returning to $P_{ISA}$ we have:
+$$P_{ISA} = P_{ISA}(\omega, MAP, \delta)$$
+
+Our goal is to compute $P_{ISA}(\omega, MAP, \delta)$ for the general case. For this, we can write:
+$$P_{ISA}(\omega, MAP, \delta) \approx P_{ISA}(\omega, MAP, \delta_{std}) + \left.\dfrac{\partial P_{ISA}}{\partial \delta}\right|_{\omega,MAP,\delta_{std}}(\delta - \delta_{std})$$
+
+The first term is directly available from the left graph.
+
+For the second term, we can estimate the derivative at $\delta_{std}$ as:
+$$\left.\dfrac{\partial P_{ISA}}{\partial \delta}\right|_{\omega,MAP,\delta_{std}}\approx \frac{P_{ISA}(\omega,MAP,\delta_{ref}) - P_{ISA}(\omega,MAP,\delta_{std})}{\delta_{ref} - \delta_{std}}$$
+
+Where $\delta_{ref}$ denotes some arbitrary reference $\delta$ value and $P_{ISA}(\omega,MAP,\delta_{ref})$ is the corresponding power output.
+
+We can choose $\delta_{ref} = \delta_{wot}(\omega, MAP)$, that is, a $\delta$ value such that $MAP$ is the wide-open throttle $MAP$. In that case, the power output $P_{ISA}(\omega,MAP,\delta_{ref})$ will be:
+
+$$P_{ISA}(\omega, MAP, \delta_{ref}) = P_{ISA,wot}(\omega,\delta_{wot}(\omega, MAP))$$
+
+Once we have $P_{ISA}(\omega,MAP,\delta)$, we compute:
+$$P(\omega,MAP,\delta,T) = P_{ISA}(\omega,MAP,\delta)\sqrt{\dfrac{T_{ISA}}{T}}$$
+
+Where:
+$$T_{ISA}(p) = T_{std}\left( \dfrac{p}{p_{std}} \right)^{-\dfrac{\beta R}{g_{std}}}$$
 
 ## Throttle to MAP
 
-Our input to the engine is not a $MAP$ value, but a throttle setting $thr$. What should the relation between the engine throttle input and the actual $MAP$ be in each operating condition? For each $(n, p)$ combination, the right graph gives us $MAP_{wot}$. Then we simply compute:
+Our actual input to the engine is not a $MAP$ value, but a throttle setting $thr$. What should the relation between the engine throttle input and the actual $MAP$ be in each operating condition?
 
-$$MAP(thr, p, n) = MAP_{wot} \left(k + thr (1 - k)\right)$$
+For each $(\omega, \delta)$ combination, the right graph gives us $MAP_{wot}$. Then we simply compute:
+$$MAP(thr, \delta, \omega) = MAP_{wot} \left(k + thr (1 - k)\right)$$
 
-Where $k$ is a suitably chosen idle $MAP_{idle}/MAP_{wot}$ ratio, for example 0.4$.
+Where $k$ is a suitably chosen idle $MAP_{idle}/MAP_{wot}$ ratio (0.4 may be reasonable).
 
 With this relation, engine power becomes a function of the form:
-$$P = P(n, MAP, T, p) = P(thr, n, p, T)$$
+$$P = P(\omega, MAP, \delta, T) = P(thr, \omega, \delta, T)$$
 
 ## Continuous Operation Limits
 
-Both graphs in Fig. 3-21 show a line labelled "limiting manifold pressure for continuous operation". From looking at both graphs, it is apparent that this line actually enforces a maximum power for each $n$. That is, it defines a function $\tilde{P}_{lim}(n)$
+Both graphs in Fig. 3-21 show a line labelled "limiting manifold pressure for continuous operation". From looking at both graphs, it is apparent that this line actually enforces a maximum power for each $\omega$. That is, it defines a function $P_{ISA,lim}(\omega)$
 
-So far we have ignored this limit when computing $\tilde{P}$, so we may obtain values $\tilde{P} > \tilde{P}_{lim}(n)$. In principle, this power limitation is not enforced by the engine itself; they are under the pilot's responsibility. Therefore, we can choose to ignore them when modeling the engine. But we can also easily simulate the observation of these limits by setting $\tilde{P} = min\{\tilde{P}, \tilde{P}_{lim}(n)\}$.
-
-## Computing $P$
-
-Finally, we recover $P$ from $\tilde{P}$ with:
-$$P(n,MAP,p,T) = \tilde{P}(n,MAP,p) \sqrt{\dfrac{T_{ISA}(p)}{T}}$$
-
-Where:
-
-$$T_{ISA}(p) = T_{std}\left( \dfrac{p}{p_{std}} \right)^{-\dfrac{\beta R}{g_{sl}}}$$
+So far we have ignored this limit when computing $P_{ISA}$, so we may obtain values $P_{ISA} > P_{ISA, lim}(\omega)$. In principle, this power limitation is not enforced by the engine itself; they are under the pilot's responsibility. Therefore, we can choose to ignore them when modeling the engine. But we can also easily simulate the observation of these limits by setting $P_{ISA} = min\{P_{ISA}, P_{ISA,lim}(\omega)\}$.
 
 ## Effect of Mixture
 
@@ -132,7 +149,7 @@ Figure 3-21 assumes maximum power mixture ($mix = 1$). We can use the ratios in 
 ## Fuel consumption
 
 Figure 3-5 provides fuel consumption as:
-$$\dot{m} = \dot{m}(n,P,mix)$$
+$$\dot{m} = \dot{m}(\omega,P,mix)$$
 
 Where $P$ is the actual engine power output. This could be
 
